add: discord logger

--- a/example.env
+++ b/example.env
@@ -19,6 +19,7 @@ USER_ADMIN_PASSWORD="admin"
 MAILER_EMAIL=maileremail@mail.com
 MAILER_PASSWORD=mailerAppPassword
 RESETPW_FE_ENDPOINT=http://localhost:5173/reset-password
+DISCORD_WEBHOOK_URL=""
 
 # Linux build
 # export GOOS=linux
